fix: progressbar trail color missing fix: improve dark mode styles

--- a/includes/admin/page-optimizer/src/index.css
+++ b/includes/admin/page-optimizer/src/index.css
@@ -79,3 +79,7 @@
   color-scheme: dark;
 }
 
+.rapidload-dark path.CircularProgressbar-trail {
+  stroke: #2d2d2d !important;
+}
+
